--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
-    "mysql": "^2.13.0",
-    "sequelize": "^4.0.0",
+    "mysql2": "^1.3.5",
+    "sequelize": "^4.2.0",
     "serve-favicon": "~2.4.2"
   }
 }
